# cmake_ctest

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test-build-release-all-platforms.yml  test-build-release.yml
lib/: hello_lib.c  hello_lib.h
src/: hello_lib.c
tests/: CMakeLists.txt  test_hello.c
